--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,6 @@
-ETCD_ADDR: "10.1.201.110:4001"
+ETCD_URI: "10.1.201.110:4001"
 ETCD_PREFIX: "/NBE/_Apps/"
+SQLALCHEMY_DATABASE_URI: "mysql://platform_root:mnjksghqFGeksh342ui@10.1.201.58:3306/dot"
+SQLALCHEMY_POOL_SIZE: "100"
+SQLALCHEMY_POOL_TIMEOUT: "10"
+SQLALCHEMY_POOL_RECYCLE: "3600"
