--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask
 PyYAML
 Flask-SQLAlchemy
 MySQL-python
+enum34
 -e git+http://git.hunantv.com/mirror/python-etcd.git#egg=etcd
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
