嗯嗯... 可以部署和下线了

--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,4 @@ SQLALCHEMY_DATABASE_URI: "mysql://marco:eb320f0c@10.1.201.58:3306/dot"
 SQLALCHEMY_POOL_SIZE: 100
 SQLALCHEMY_POOL_TIMEOUT: 10
 SQLALCHEMY_POOL_RECYCLE: 3600
+DOT_URL: "http://10.1.201.99:45000"
