--- a/config.yaml
+++ b/config.yaml
@@ -5,3 +5,11 @@ SQLALCHEMY_POOL_SIZE: 100
 SQLALCHEMY_POOL_TIMEOUT: 10
 SQLALCHEMY_POOL_RECYCLE: 3600
 DOT_URL: "http://10.1.201.99:45000"
+
+mysql:
+    host: "localhost"
+    port: 3306
+    username: "root"
+    password: ""
+    db: "marco"
+
