add elastic search

--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,7 @@ SQLALCHEMY_POOL_SIZE: 100
 SQLALCHEMY_POOL_TIMEOUT: 10
 SQLALCHEMY_POOL_RECYCLE: 3600
 DOT_URL: "http://10.1.201.99:45000"
+ES_URI: "http://10.1.201.140:9200"
 
 mysql:
     host: "localhost"
