--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Flask-SQLAlchemy
 MySQL-python
 enum34
 elasticsearch
+influxdb
 -e git+http://git.hunantv.com/mirror/python-etcd.git#egg=etcd
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
