--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ SQLALCHEMY_POOL_TIMEOUT: 10
 SQLALCHEMY_POOL_RECYCLE: 3600
 DOT_URL: "http://10.1.201.99:45000"
 ES_URI: "http://10.1.201.140:9200"
+INFLUXDB_URI: "http://root:root@10.1.201.110:8086/NBE"
 
 mysql:
     host: "localhost"
