--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ MySQL-python
 enum34
 elasticsearch
 influxdb
+pyapi-gitlab
 -e git+http://git.hunantv.com/mirror/python-etcd.git#egg=etcd
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
