--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ enum34
 elasticsearch
 influxdb
 pyapi-gitlab
--e git+http://git.hunantv.com/mirror/python-etcd.git#egg=etcd
+python-etcd
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
