--- a/config.yaml
+++ b/config.yaml
@@ -11,6 +11,9 @@ GITLAB_URL: "http://git.hunantv.com"
 GITLAB_TOKEN: "pmtQ2kZaYQSarGwU3DYy"
 DB_MANAGER_URL: "http://192.168.8.213:8088"
 
+OPENID2_YADIS: "http://openids.intra.hunantv.com/server/yadis/"
+OPENID2_LOGOUT: "http://openids.intra.hunantv.com/auth/logout/"
+
 mysql:
     host: "localhost"
     port: 3306
