add import , need to use page=1

--- a/env.yaml
+++ b/env.yaml
@@ -9,7 +9,7 @@ DOT_LOG_URL: "ws://10.1.201.99:45000/log"
 ES_URI: "http://10.1.201.127:9200"
 INFLUXDB_URI: "http://root:root@10.1.201.42:8086/NBE"
 GITLAB_URL: "http://git.hunantv.com"
-GITLAB_TOKEN: "pmtQ2kZaYQSarGwU3DYy"
+GITLAB_TOKEN: "7But24mc5CUMUnGsL1Hy"
 DB_MANAGER_URL: "http://192.168.8.213:8088"
 
 OPENID2_YADIS: "http://openids.intra.hunantv.com/server/yadis/"
