--- a/env.yaml
+++ b/env.yaml
@@ -4,7 +4,8 @@ SQLALCHEMY_DATABASE_URI: "mysql://marco:eb320f0c@10.1.201.58:3306/dot"
 SQLALCHEMY_POOL_SIZE: 100
 SQLALCHEMY_POOL_TIMEOUT: 10
 SQLALCHEMY_POOL_RECYCLE: 3600
-DOT_URL: "http://10.1.201.99:45000"
+DOT_URL_INTRA: "http://10.1.201.99:45000"
+DOT_URL_ONLINE: "http://10.1.201.99:46000"
 DOT_LOG_URL: "ws://10.1.201.99:45000/log"
 ES_URI: "http://10.1.201.127:9200"
 INFLUXDB_URI: "http://root:root@10.1.201.42:8086/NBE"
