--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 Flask
 PyYAML
-Flask-SQLAlchemy
-MySQL-python
 enum34
 elasticsearch
 influxdb
 python-etcd
 python-openid
+arrow
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
 -e git+http://git.hunantv.com/mirror/pyapi-gitlab.git#egg=gitlab
