--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ elasticsearch
 influxdb
 python-etcd
 python-openid
+mysql-python
+flask-sqlalchemy
 arrow
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
 -e git+http://git.hunantv.com/mirror/pyapi-gitlab.git#egg=gitlab
