--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ python-etcd
 python-openid
 mysql-python
 flask-sqlalchemy
+raven
 arrow
 -e git+http://git.hunantv.com/tonic/flask-navigator.git#egg=flask_navigator
 -e git+http://git.hunantv.com/mirror/pyapi-gitlab.git#egg=gitlab
